Phase 1: 전공자 기준 재점검에서 발견한 코드 결함 수정
Java(Ch01~03):
- Shape를 abstract sealed class로, area()를 추상 메서드로(넓이 0 반환 안티패턴 제거)
- Animal/EqualsHashCodeExample equals()에 instanceof 대칭성 트레이드오프 주석 추가
- ArraysAndMethods: 정렬 후에도 unsorted였던 변수명을 sorted로 정정(binarySearch 오해 방지)
- 광범위 catch(Exception)를 구체 예외로 축소(RuntimeException/DateTimeParseException),
  MyResource.close()의 throws 축소
- Stream 예제를 Collectors.toList() → .toList()로 통일(+가변/불변 차이 설명 주석)

Spring:
- ch07: GlobalExceptionHandler 신설(중복 가입 IllegalArgumentException→409,
  로그인 실패 BadCredentials/UsernameNotFound→401, @Valid 실패→400).
  JwtAuthenticationFilter의 catch(Exception)를 ExpiredJwtException/JwtException로
  구분(위조·만료 토큰을 조용히 삼키지 않고 로깅).
- ch08: Product 엔티티 직접 노출 완화 — id에 @JsonProperty(READ_ONLY)로
  mass-assignment 차단, @Valid + Bean Validation, DTO 사용 권고 주석.
- ch09(캡스톤): 목록 API의 N+1 회귀 수정 — author는 @EntityGraph, 댓글 수는
  GROUP BY COUNT 프로젝션으로 O(1) 쿼리화(ch06와 동일 패턴). 소유권 인가 검증
  통합 테스트 추가(타인 글 수정/삭제 시 403).

전 챕터 main+test 컴파일 확인(ch07/ch08 테스트 통과). Java 44클래스 컴파일.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>